graph with the currency values history

--- a/app/views/currencies/index.html.haml
+++ b/app/views/currencies/index.html.haml
@@ -1,2 +1,1 @@
-%h1 Currencies#index
-%p Find me in app/views/currencies/index.html.haml
+#currency-chart{ 'data-chart-categories': @categories, 'data-chart-series': @series }
